--- a/task_12/style/sass/content.sass
+++ b/task_12/style/sass/content.sass
@@ -4,7 +4,8 @@
     max-width: 1160px
     margin: 0 auto
     padding: 2em
-    filter: drop-shadow(4px 5px 6px rgba(0, 0, 0, 0.2))
+    filter: drop-shadow(0px 0px 0px #000) 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.10), 0 6px 7px rgba(0, 0, 0, 0.12)
     &__wrapper
         display: flex
         justify-content: space-around
